# RDE_WAVELET_TRANSFORM_CHARACTERIZATION

./: README.md  guide.md  history.md
container/: Dockerfile  pyproject.toml  requirements-test.txt  requirements.txt  tox.ini
container/modules/: datasets_process.py  graph_handler.py  inputfile_handler.py  interfaces.py  invoice_handler.py  meta_handler.py  structured_handler.py  wavelet.py
container/tests/: conftest.py  test_meta.py  test_output.py
container/tests/fixtures/: template_files.py
docs/manual/: index.md
templates/template/: batch.yaml  catalog.schema.json  jobs.template.yaml  metadata-def.json
templates/template/tasksupport/: invoice.schema.json  rdeconfig.yaml
tryout/: invoice_sample.json  tryout.md
